Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-13433

lfs mirror delete "usage" and manpage do not match

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.14.0
    • Upstream
    • 3
    • 9223372036854775807

      --mirror-id option is missing from "usage" and --comp-id is written instead of --component-id (both work actually)

        [root@vm4 flr]# lfs mirror delete
        lfs mirror delete delete: FILE must be specified
        delete a mirror from a file.
        usage: lfs mirror delete {--comp-id|-I <comp_id>|-p <pool>} <mirrored_file> ...
        

       manpage : lfs mirror delete {-mirror-id <mirror_id> | --component-id|-I <comp_id> |-pool <pool>} <mirrored_file>

            baillergeau Kevin Baillergeau (Inactive)
            baillergeau Kevin Baillergeau (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: