LU-13433 doc: fix lfs mirror "delete" and "split" doc

Add --mirror-id and --component-id in "lfs mirror delete" usage
Add examples with --comp-id in lfs mirror delete and split manpages
Add --comp-id in lfs mirror delete and split manpages

Test-Parameters: trivial
Signed-off-by: Kévin Baillergeau <kevin.baillergeau.ocre@cea.fr>
Change-Id: Icdc010eec9141b2582f9d43418523643b11018e5
Reviewed-on: https://review.whamcloud.com/38394
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Reviewed-by: Jian Yu <yujian@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>